--- a/search/package.json
+++ b/search/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "fuse.js": "^6.6.2",
     "lodash": "^4.17.21",
+    "lottie-react-native": "^6.2.0",
     "react": "18.2.0",
     "react-native": "0.72.4",
+    "react-native-animated-loader": "^1.0.0",
     "react-native-fast-image": "^8.6.3",
     "react-native-linear-gradient": "^2.8.2",
     "react-native-paper": "^5.10.3",
